--- a/Vakansion/Vakansion/Views/Users/Delete.cshtml
+++ b/Vakansion/Vakansion/Views/Users/Delete.cshtml
@@ -1,5 +1,21 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using Vacancy.Repository.Dto.UserDto
+
+@model UserRead
+
 @{
 }
+
+
+<h1>Видалити користувача?</h1>
+<hr />
+
+<p>@Model.FirstName @Model.LastName</p>
+<p>@Model.Email</p>
+
+<hr />
+<form asp-action="ConfirmDelete" class="col-md-4">
+    @Html.AntiForgeryToken()
+    <input asp-for="Id" type="hidden" />
+    <button type="submit" class="btn btn-danger">Видалити користувача!!!</button>
+    <a href="/users/index" class="btn btn-outline-dark">Повернутися до списку / Відмінити</a>
+</form>
